# joy2midi

./: .gitignore  LICENSE.txt  README.md  build_exe.bat  build_exe_debug.bat  joy2midi.py  make_icon.py  pyinstaller_runtime_hook.py  pyproject.toml  requirements.txt  run_app.bat
