[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "joy2midi"
version = "0.2.1"
description = "Free guided gamepad-to-MIDI CC mapper for Windows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-2.0-only" }
authors = [
    { name = "Audi Etoffe and Acid Reign Productions" }
]
dependencies = [
    "pygame>=2.5.0",
    "mido>=1.3.0",
    "python-rtmidi>=1.5.0"
]

[project.urls]
Homepage = "https://acidreignproductions.com"
DJ = "https://linktr.ee/etoffe"
Funding = "https://buymeacoffee.com/acidrp"
Repository = "https://github.com/AudiEtoffe/joy2midi"

[tool.pyinstaller]
# Build with build_exe.bat on Windows.
